# leetcode

./: .gitignore  pyproject.toml  pyrightconfig.json
sudoku-solver/: main.py  test_main.py
