[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["wiro34 <too@wirog.net>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
pytest = "^7.1.3"
pytest-watch = "^4.2.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
